table alignment issue fixed

--- a/assets/style.css
+++ b/assets/style.css
@@ -21,6 +21,7 @@
 }
 .table_booking_grid .table:nth-child(37) {
     grid-row: 4;
+    grid-column: 1 !important;
 }
 .table_booking_grid .table:nth-child(1), .table_booking_grid .table:nth-child(12n+1),
 .table_booking_grid .table:nth-child(12n + 50) {
